# autoxing

./: README.md
autoxing-spellbook-cli/: .gitignore  BlueOceanNew.json  README.md  REPLICATION_GUIDE.md  activate_autoxing.sh  deactivate_autoxing.sh  pyproject.toml  setup_bin.sh
autoxing-spellbook-cli/autoxing/: api_client.py  autoxing_help.py  autoxing_help_detailed.py  cancel_move.py  change_active_robot.py  check_robot_movement.py  chrony.py  clear_wheel_errors.py  cli_tables.py  create_map.py  delete_all_mappings.py  delete_all_maps.py  delete_map.py  delete_mapping.py  download_map.py  finish_mapping.py  get_alerts.py  get_battery_state.py  get_boot_progress.py  get_current_map.py  get_device_brief.py  get_device_info.py  get_map_overlays.py  get_map_ws.py  get_mapping.py  get_mapping_landmarks.py  get_mapping_trajectories.py  get_maps.py  get_move_status.py  get_nav_thumbnail.py  get_path.py  get_pose.py  get_rgb_image.py  get_robot_position.py  get_waypoints.py  get_wheel_state.py  get_wifi_info.py  jack_down.py  jack_state.py  jack_up.py  (+20 more)
autoxing-spellbook-cli/autoxing_spellbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autoxing-spellbook-cli/maps/: patch.json
autoxing-spellbook-gui/: README.md  advanced_hub.py  app.py  live_map.py  manual_control.py  mappings_hub.py  maps.py  navigation.py  pyproject.toml  services.py  settings_page.py  telemetry.py  ui_api_block.py  ui_transport.py
autoxing-spellbook-gui/.streamlit/: config.toml  secrets.toml.example
autoxing-spellbook-gui/api/: __init__.py  caps.py  client.py  websocket.py
(+4 files in other folders)
