[project]
name = "autoxing-spellbook"
version = "0.1.0"
description = "CLI utilities for Autoxing AXBot robots (REST + WebSocket)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "websockets>=12.0",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
