[project]
name = "axbot-controller"
version = "0.1.0"
description = "Streamlit control panel for Autoxing AXBot (OpenAPI v2.14)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "requests>=2.32",
    "websockets>=12.0",
    "plotly>=5.22",
    "streamlit-image-coordinates>=0.2",
    "pillow>=10.0",
]

[tool.uv]
package = false
